--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,12 +48,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Create Release
+        id: create_release
+        uses: actions/create-release@latest
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release create v${{ github.run_number }} \
-            --title "Release ${{ github.run_number }}" \
-            --generate-notes
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          tag_name: v${{ github.run_number }}
+          release_name: Release ${{ github.run_number }}
+          draft: false
+          prerelease: false      
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
